--- a/lab4_TP_NumPy_Tasks.ipynb
+++ b/lab4_TP_NumPy_Tasks.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 1,
    "id": "c57371f7-eb32-402d-8de9-2e98ad4864e1",
    "metadata": {},
    "outputs": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 2,
    "id": "af3af346-681c-4d7d-bde1-bc035445e4a9",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 3,
    "id": "9166d313-d568-430e-97ea-1553eb04f63d",
    "metadata": {},
    "outputs": [
@@ -81,21 +81,21 @@
      "output_type": "stream",
      "text": [
       "Вектор p:\n",
-      "[ 2.11446575  9.13667719  5.32021241 -0.91032366  1.37765872  3.51895472\n",
-      " -3.85775144  9.10895448  0.27494205  3.25529469  1.2099702   3.62119503\n",
-      "  6.47931755  6.06588677  6.78245802  6.26197953  1.21010918  1.56485241\n",
-      "  2.78876425  2.24281954  8.13603801  3.79296101 11.17982761  4.46750778\n",
-      "  1.86061795  5.60713456  6.48360869  7.94826837  4.8981655   5.22594203\n",
-      "  9.13246976  1.9774553   5.88548917  3.6280068   8.8073148   4.18831281\n",
-      "  5.43318276  2.49886143  0.44257405  4.86526001  0.16130293  6.4106272\n",
-      "  2.92592177  9.0149111   5.44783139 -2.53345161  1.36962051  2.96690051\n",
-      " -3.66547599  4.80907182  3.48892455  2.59486217  1.94129103  0.16337914\n",
-      "  8.46978271  5.89567621  3.20204615  5.24553993  5.2709979   1.93866154\n",
-      "  6.67805444 -1.31676853 -3.09105484 -3.51828126 -1.37666589 -0.69348204\n",
-      " -0.85802061  3.31394955  1.58805119  8.3529139   3.41568759 -1.92931815\n",
-      " -2.13734909  9.19841124  1.54467356  6.53873249  2.09010776 13.62001995\n",
-      " -1.60211303  2.48178107 -4.15186745 -0.52045076 -1.4694874   0.50345905\n",
-      "  5.03545481]\n"
+      "[ 3.51273964 -1.62154659  5.66789462  8.00799721 -0.04446484  6.6860269\n",
+      " -0.61760469  5.17200838  0.04475313 -0.77787642  8.5054754   2.06300522\n",
+      "  5.33587528  0.39567279  5.6016656   2.2144417  10.00431765  1.06053006\n",
+      "  2.29286267  2.82115521  6.92603926  3.88804524  2.06217288  1.41084055\n",
+      "  6.90289207  5.66311827 -0.18355905 -2.11763652 -3.61355825  0.52773691\n",
+      "  2.48793475  2.35587031  4.51071764 -1.27663654 -2.00811103  5.19276973\n",
+      " -5.81356992  1.32274911 -1.85619001  9.68304968  7.84525236  4.41918659\n",
+      "  3.29160353  6.0509989   3.76676009 -1.89173538 10.61744184  1.86003516\n",
+      "  4.27523685  7.92744993 -0.36757761  3.54642591 -0.2198221  -0.23586662\n",
+      " -3.52502458  1.28946495  2.67951111  7.5001423   5.13893768  8.70789094\n",
+      "  3.51721901 -0.61392764 -3.97784719 -0.31395771  5.48244852  2.47016873\n",
+      "  2.54398998  9.32455044  6.24661912 10.44706299  0.65733601  4.33167452\n",
+      " -2.899601    4.48174962  4.45141541  4.68051491 -0.44461397 10.41487756\n",
+      "  4.66445162  7.86165784  8.9800487   4.98026003  3.10492092  2.23943302\n",
+      "  4.27446469]\n"
      ]
     }
    ],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 4,
    "id": "4f618548-c9cd-488e-90b9-71105a6b28ad",
    "metadata": {},
    "outputs": [
@@ -116,6 +116,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Вектор q^T:\n",
+      "[16. 28. 20. 28. 16. 35. 16. 28. 20. 28. 16. 35. 16. 28. 20. 28. 16. 35.\n",
+      " 16. 28. 20. 28. 16. 35. 16. 28. 20. 28. 16. 35. 16. 28. 20. 28. 16. 35.\n",
+      " 16. 28. 20. 28. 16. 35. 16. 28. 20. 28. 16. 35. 16. 28. 20. 28. 16. 35.\n",
+      " 16. 28. 20. 28. 16. 35. 16. 28. 20. 28. 16. 35. 16. 28. 20. 28. 16. 35.\n",
+      " 16. 28. 20. 28. 16. 35. 16. 28. 20. 28. 16. 35. 16.]\n",
+      "\n",
       "Вектор q:\n",
       "[16. 28. 20. 28. 16. 35. 16. 28. 20. 28. 16. 35. 16. 28. 20. 28. 16. 35.\n",
       " 16. 28. 20. 28. 16. 35. 16. 28. 20. 28. 16. 35. 16. 28. 20. 28. 16. 35.\n",
@@ -127,14 +134,18 @@
    ],
    "source": [
     "# q^T = {N24,j ⊙ N71,j}\n",
-    "q = np.multiply(n[24, :size],n[71, :size])\n",
-    "print('Вектор q:')\n",
-    "print(q)"
+    "qT = np.multiply(N[24, :size],N[71, :size])\n",
+    "print('Вектор q^T:')\n",
+    "print(qT)\n",
+    "\n",
+    "q = qT.T\n",
+    "print('\\nВектор q:')\n",
+    "print(qT)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 5,
    "id": "fbb9a9e2-fbf0-4378-940f-fdbdeb0619d5",
    "metadata": {},
    "outputs": [
@@ -142,12 +153,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "qqT:\n",
+      "[[ 256.  448.  320. ...  256.  560.  256.]\n",
+      " [ 448.  784.  560. ...  448.  980.  448.]\n",
+      " [ 320.  560.  400. ...  320.  700.  320.]\n",
+      " ...\n",
+      " [ 256.  448.  320. ...  256.  560.  256.]\n",
+      " [ 560.  980.  700. ...  560. 1225.  560.]\n",
+      " [ 256.  448.  320. ...  256.  560.  256.]]\n",
+      "\n",
+      "det_qqT:\n",
+      "0.0\n",
+      "\n",
       "Вектора f:\n",
-      "[ 0.  0.  0. -0.  0.  0. -0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
-      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
-      "  0.  0.  0.  0.  0.  0.  0.  0.  0. -0.  0.  0. -0.  0.  0.  0.  0.  0.\n",
-      "  0.  0.  0.  0.  0.  0.  0. -0. -0. -0. -0. -0. -0.  0.  0.  0.  0. -0.\n",
-      " -0.  0.  0.  0.  0.  0. -0.  0. -0. -0. -0.  0.  0.]\n",
+      "[ 0. -0.  0.  0. -0.  0. -0.  0.  0. -0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
+      "  0.  0.  0.  0.  0.  0.  0.  0. -0. -0. -0.  0.  0.  0.  0. -0. -0.  0.\n",
+      " -0.  0. -0.  0.  0.  0.  0.  0.  0. -0.  0.  0.  0.  0. -0.  0. -0. -0.\n",
+      " -0.  0.  0.  0.  0.  0.  0. -0. -0. -0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
+      " -0.  0.  0.  0. -0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
       "\n",
       "Вектор f:\n",
       "0.0\n"
@@ -157,16 +180,20 @@
    "source": [
     "# Вычисление f = det(qq^T)p\n",
     "# Вычисляем произведение qq^T\n",
-    "qqT = np.outer(q, q**2).T\n",
+    "qqT = np.outer(q, qT)\n",
+    "print('qqT:')\n",
+    "print(qqT)\n",
     "\n",
-    "# Вычисляем определитель матрицы qq^T\n",
+    "# Вычисляем определитель матрицы det(qq^T)\n",
     "det_qqT = np.linalg.det(qqT)\n",
+    "print('\\ndet_qqT:')\n",
+    "print(det_qqT)\n",
     "\n",
     "# Вычисляем f\n",
     "f = det_qqT * p\n",
     "\n",
     "# Выводим результат\n",
-    "print('Вектора f:')\n",
+    "print('\\nВектора f:')\n",
     "print(f)\n",
     "\n",
     "f = det_qqT\n",
@@ -176,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 6,
    "id": "851eae5f-abef-45b9-a377-75bc0411cc85",
    "metadata": {},
    "outputs": [
@@ -184,65 +211,79 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Mii:\n",
+      "[  3.   5.   7.   9.  11.  13.  15.  17.  19.  21.  23.  25.  27.  29.\n",
+      "  31.  33.  35.  37.  39.  41.  43.  45.  47.  49.  51.  53.  55.  57.\n",
+      "  59.  61.  63.  65.  67.  69.  71.  73.  75.  77.  79.  81.  83.  85.\n",
+      "  87.  89.  91.  93.  95.  97.  99. 101. 103. 105. 107. 109. 111. 113.\n",
+      " 115. 117. 119. 121. 123. 125. 127. 129. 131. 133. 135. 137. 139. 141.\n",
+      " 143. 145. 147. 149. 151. 153. 155. 157. 159. 161. 163. 165. 167. 169.\n",
+      " 171.]\n",
       "\n",
-      "Результаты g (со сложением):\n",
-      "[[ 4095. 12542.  6402. ...  4259. 19762.  4263.]\n",
-      " [ 7167. 21950. 11202. ...  7331. 34462.  7335.]\n",
-      " [ 5119. 15678.  8002. ...  5283. 24662.  5287.]\n",
-      " ...\n",
-      " [ 4095. 12542.  6402. ...  4259. 19762.  4263.]\n",
-      " [ 8959. 27438. 14002. ...  9123. 43037.  9127.]\n",
-      " [ 4095. 12542.  6402. ...  4259. 19762.  4263.]]\n",
+      "Nii:\n",
+      "[4. 7. 5. 7. 4. 7. 4. 7. 5. 7. 4. 7. 4. 7. 5. 7. 4. 7. 4. 7. 5. 7. 4. 7.\n",
+      " 4. 7. 5. 7. 4. 7. 4. 7. 5. 7. 4. 7. 4. 7. 5. 7. 4. 7. 4. 7. 5. 7. 4. 7.\n",
+      " 4. 7. 5. 7. 4. 7. 4. 7. 5. 7. 4. 7. 4. 7. 5. 7. 4. 7. 4. 7. 5. 7. 4. 7.\n",
+      " 4. 7. 5. 7. 4. 7. 4. 7. 5. 7. 4. 7. 4.]\n",
       "\n",
-      "Вектор g (со сложением):\n",
-      "1491694.1873989636\n",
+      "qTq:\n",
+      "[ 256.  784.  400.  784.  256. 1225.  256.  784.  400.  784.  256. 1225.\n",
+      "  256.  784.  400.  784.  256. 1225.  256.  784.  400.  784.  256. 1225.\n",
+      "  256.  784.  400.  784.  256. 1225.  256.  784.  400.  784.  256. 1225.\n",
+      "  256.  784.  400.  784.  256. 1225.  256.  784.  400.  784.  256. 1225.\n",
+      "  256.  784.  400.  784.  256. 1225.  256.  784.  400.  784.  256. 1225.\n",
+      "  256.  784.  400.  784.  256. 1225.  256.  784.  400.  784.  256. 1225.\n",
+      "  256.  784.  400.  784.  256. 1225.  256.  784.  400.  784.  256. 1225.\n",
+      "  256.]\n",
       "\n",
-      "Результаты g:\n",
-      "[ 4095. 21950.  8002. 21954.  4103. 42881.  4107. 21962.  8014. 21966.\n",
-      "  4115. 42893.  4119. 21974.  8026. 21978.  4127. 42905.  4131. 21986.\n",
-      "  8038. 21990.  4139. 42917.  4143. 21998.  8050. 22002.  4151. 42929.\n",
-      "  4155. 22010.  8062. 22014.  4163. 42941.  4167. 22022.  8074. 22026.\n",
-      "  4175. 42953.  4179. 22034.  8086. 22038.  4187. 42965.  4191. 22046.\n",
-      "  8098. 22050.  4199. 42977.  4203. 22058.  8110. 22062.  4211. 42989.\n",
-      "  4215. 22070.  8122. 22074.  4223. 43001.  4227. 22082.  8134. 22086.\n",
-      "  4235. 43013.  4239. 22094.  8146. 22098.  4247. 43025.  4251. 22106.\n",
-      "  8158. 22110.  4259. 43037.  4263.]\n",
+      "diff:\n",
+      "[ -1.  -2.   2.   2.   7.   6.  11.  10.  14.  14.  19.  18.  23.  22.\n",
+      "  26.  26.  31.  30.  35.  34.  38.  38.  43.  42.  47.  46.  50.  50.\n",
+      "  55.  54.  59.  58.  62.  62.  67.  66.  71.  70.  74.  74.  79.  78.\n",
+      "  83.  82.  86.  86.  91.  90.  95.  94.  98.  98. 103. 102. 107. 106.\n",
+      " 110. 110. 115. 114. 119. 118. 122. 122. 127. 126. 131. 130. 134. 134.\n",
+      " 139. 138. 143. 142. 146. 146. 151. 150. 155. 154. 158. 158. 163. 162.\n",
+      " 167.]\n",
+      "\n",
+      "result:\n",
+      "[ 255.  782.  402.  786.  263. 1231.  267.  794.  414.  798.  275. 1243.\n",
+      "  279.  806.  426.  810.  287. 1255.  291.  818.  438.  822.  299. 1267.\n",
+      "  303.  830.  450.  834.  311. 1279.  315.  842.  462.  846.  323. 1291.\n",
+      "  327.  854.  474.  858.  335. 1303.  339.  866.  486.  870.  347. 1315.\n",
+      "  351.  878.  498.  882.  359. 1327.  363.  890.  510.  894.  371. 1339.\n",
+      "  375.  902.  522.  906.  383. 1351.  387.  914.  534.  918.  395. 1363.\n",
+      "  399.  926.  546.  930.  407. 1375.  411.  938.  558.  942.  419. 1387.\n",
+      "  423.]\n",
       "\n",
       "Вектор g:\n",
-      "202105.29393115858\n"
+      "7181.611727182138\n"
      ]
     }
    ],
    "source": [
     "# Создаем диагональную матрицу Mii\n",
     "Mii = np.diag(M)\n",
+    "print('Mii:')\n",
+    "print(Mii)\n",
     "\n",
     "# Создаем диагональную матрицу Nii\n",
     "Nii = np.diag(N)\n",
+    "print('\\nNii:')\n",
+    "print(Nii)\n",
     "\n",
     "# Считаем q^Tq\n",
-    "qTq = np.outer(q**2, q).T\n",
+    "qTq = np.multiply(qT, q)\n",
+    "print('\\nqTq:')\n",
+    "print(qTq)\n",
     "\n",
     "# Считаем разность Mii - Nii\n",
     "diff = Mii - Nii\n",
+    "print('\\ndiff:')\n",
+    "print(diff)\n",
     "\n",
-    "# Вычисляем {Mii-Nii+q^Tq}^84, где q^T(^84) = {N24,j ⊙ N71,j}^84. Метод np.outer - не подходит, т.к. при произведении двух векторов создается\n",
-    "# множество новых элементов!\n",
-    "# Вычисление оставил для проверки\n",
+    "# Вычисляем {Mii-Nii+q^Tq}\n",
     "result = diff + qTq\n",
-    "\n",
-    "print('\\nРезультаты g (со сложением):')\n",
-    "print(result)\n",
-    "\n",
-    "# Вычисляем g как норму вектора result\n",
-    "g = np.linalg.norm(result, ord=2) # ||...||2 - нормаль вектора\n",
-    "print('\\nВектор g (со сложением):')\n",
-    "print(g)\n",
-    "\n",
-    "#Без сложения двух векторов\n",
-    "result = diff + q**2 * q\n",
-    "\n",
-    "print('\\nРезультаты g:')\n",
+    "print('\\nresult:')\n",
     "print(result)\n",
     "\n",
     "# Вычисляем g как норму вектора result\n",
