--- a/lab4_TP_Pandas_Tasks.ipynb
+++ b/lab4_TP_Pandas_Tasks.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 1,
    "metadata": {
     "id": "5JrhiqZe7TPt"
    },
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -52,16 +52,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2023-11-22 15:10:28--  https://web.stanford.edu/class/archive/cs/cs109/cs109.1166/stuff/titanic.csv\n",
+      "--2023-11-27 20:39:59--  https://web.stanford.edu/class/archive/cs/cs109/cs109.1166/stuff/titanic.csv\n",
       "Resolving web.stanford.edu (web.stanford.edu)... 171.67.215.200, 2607:f6d0:0:925a::ab43:d7c8\n",
       "Connecting to web.stanford.edu (web.stanford.edu)|171.67.215.200|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 44225 (43K) [text/csv]\n",
-      "Saving to: ‘titanic.csv.1’\n",
+      "Saving to: ‘titanic.csv’\n",
       "\n",
-      "titanic.csv.1       100%[===================>]  43.19K  98.0KB/s    in 0.4s    \n",
+      "titanic.csv         100%[===================>]  43.19K   163KB/s    in 0.3s    \n",
       "\n",
-      "2023-11-22 15:10:30 (98.0 KB/s) - ‘titanic.csv.1’ saved [44225/44225]\n",
+      "2023-11-27 20:40:00 (163 KB/s) - ‘titanic.csv’ saved [44225/44225]\n",
       "\n"
      ]
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -330,7 +330,7 @@
        "[887 rows x 8 columns]"
       ]
      },
-     "execution_count": 232,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 5,
    "metadata": {
     "id": "IUMILEDGBE2e"
    },
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 6,
    "metadata": {
     "id": "oKTGxDszBuaA"
    },
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 7,
    "metadata": {
     "id": "DmEJQBYmy6DH"
    },
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 9,
    "metadata": {
     "id": "t7TviNPz4uH3"
    },
@@ -768,7 +768,7 @@
        "[887 rows x 8 columns]"
       ]
      },
-     "execution_count": 237,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 10,
    "metadata": {
     "id": "BWFDCRTx5U_f"
    },
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 11,
    "metadata": {
     "id": "WCKp1oox589c"
    },
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 12,
    "metadata": {
     "id": "Y7R5N0Mu6TdL"
    },
@@ -948,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 13,
    "metadata": {
     "id": "ypDn2pD67BQg"
    },
